--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -132,13 +132,17 @@ section {
         background-color: red;
     }
 
-    .container {
-        max-width: 80%;
+    header {
+        .container {
+            max-width: 80%;
+        }
     }
 
-    .products {
-        grid-template-columns: repeat(2, 48.5%);
-        column-gap: 3%;
+    section{
+        .products {
+            grid-template-columns: repeat(2, 48.5%);
+            column-gap: 3%;
+        }
     }
 }
 
@@ -148,11 +152,15 @@ section {
         background-color: rgb(237, 237, 86);
     }
     
-    .products {
-        display: block;
+    section {
+        .products {
+            display: block;
+    
+            .product-item  {
+                margin-bottom: 32px;
+            }
+        }
     }
 
-    .product-item  {
-        margin-bottom: 32px;
-    }
+    
 }
